src/objects/TypeOfRooms__c.object
<CustomObject>
    <description>Master Guest Room Type</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>部屋タイプ種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>E/B</fullName>
                </value>
                <value>
                    <fullName>架空</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgtInitStockCal__c</fullName>
        <formula>IF (ISNULL(AgtInitStock__c) , MaxRooms__c,AgtInitStock__c )</formula>
        <inlineHelpText>未利用、保留</inlineHelpText>
        <label>RFU(保留)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgtInitStock__c</fullName>
        <inlineHelpText>未利用、保留</inlineHelpText>
        <label>RFU(保留)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>説明</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnDescription__c</fullName>
        <label>説明（英）</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnRoomTypeName__c</fullName>
        <label>部屋タイプ名（英）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>写</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaxNumber__c</fullName>
        <label>最大人数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRooms__c</fullName>
        <inlineHelpText>部屋タイプの最大部屋数</inlineHelpText>
        <label>数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nums__c</fullName>
        <formula>if ( len(TEXT(MaxRooms__c)) = 1, &quot;  &quot; &amp; TEXT(MaxRooms__c), TEXT(MaxRooms__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$数</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeCode__c</fullName>
        <description>外連携用タイプコード</description>
        <externalId>true</externalId>
        <label>部屋タイプコード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeName__c</fullName>
        <label>部屋タイプ名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <externalId>true</externalId>
        <label>#Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>部屋タイプ</relationshipLabel>
        <relationshipName>RoomTypeShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SumNotApplicableFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <label>部屋タイプ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Seq__c</columns>
        <columns>NAME</columns>
        <columns>MaxRooms__c</columns>
        <columns>RoomTypeCode__c</columns>
        <columns>RoomTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>